--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ python-dotenv>=0.21.0,<0.22.0
 anthropic>=0.5.0,<0.6.0
 langdetect>=1.0.9,<2.0.0
 python-telegram-bot==20.3
+supabase==1.0.3
+supabase-py==2.7.4
