--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
-aiohttp>=3.10.2,<4.0.0
-python-dotenv>=0.21.0,<0.22.0
-anthropic>=0.5.0,<0.6.0
-langdetect>=1.0.9,<2.0.0
+aiohttp==3.8.4
+python-dotenv==0.21.1
+anthropic==0.5.0
+langdetect==1.0.9
 python-telegram-bot==20.3
 supabase-py==1.0.3
+httpx[http2]==0.24.1
+websockets==11.0.3
+gotrue==1.3.0
+postgrest==0.16.11
+realtime==2.0.2
+storage3==0.7.7
+supafunc==0.5.1
