--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,67 @@
-aiohttp==3.8.4
-python-dotenv==0.21.1
-anthropic==0.5.0
-langdetect==1.0.9
-python-telegram-bot==20.3
-supabase-py==0.0.2
-httpx[http2]==0.24.1
-websockets==11.0.3
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+anthropic==0.2.8
+anyio==4.4.0
+async-timeout==4.0.3
+attrs==24.2.0
+blinker==1.8.2
+certifi==2024.8.30
+chardet==4.0.0
+charset-normalizer==2.0.12
+click==8.1.7
+dataclasses==0.6
+deprecation==2.1.0
+exceptiongroup==1.2.2
+filelock==3.16.1
+Flask==3.0.3
+frozenlist==1.4.1
+fsspec==2024.9.0
 gotrue==1.3.0
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==0.17.3
+httpx==0.24.1
+huggingface-hub==0.25.0
+hyperframe==6.0.1
+idna==2.10
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+langdetect==1.0.9
+MarkupSafe==2.1.5
+multidict==6.1.0
+packaging==24.1
+pluggy==1.5.0
 postgrest==0.16.11
+postgrest-py==0.4.0
+py==1.11.0
+pydantic==2.9.2
+pydantic_core==2.23.4
+pytest==6.2.5
+python-dateutil==2.9.0.post0
+python-dotenv==0.19.1
+python-telegram-bot==20.3
+PyYAML==6.0.2
 realtime==2.0.2
+realtime-py==0.1.3
+redis==5.0.8
+requests==2.25.1
+rfc3986==1.5.0
+six==1.16.0
+sniffio==1.3.1
 storage3==0.7.7
+StrEnum==0.4.15
+supabase==2.7.4
+supabase-py==1.0.3
 supafunc==0.5.1
+tokenizers==0.20.0
+toml==0.10.2
+tqdm==4.66.5
+typing_extensions==4.12.2
+urllib3==1.26.20
+websockets==11.0.3
+Werkzeug==3.0.4
+yarl==1.11.1
