--- a/requirements.txt
+++ b/requirements.txt
@@ -54,8 +54,7 @@ six==1.16.0
 sniffio==1.3.1
 storage3==0.7.7
 StrEnum==0.4.15
-supabase==2.7.4
-supabase-py==1.0.3
+supabase>=2.7.4
 supafunc==0.5.1
 tokenizers==0.20.0
 toml==0.10.2
