--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aiohappyeyeballs==2.4.0
 aiohttp==3.10.5
 aiosignal==1.3.1
 annotated-types==0.7.0
-anthropic==0.2.8
+anthropic>=0.2.8,<0.3.0
 anyio==4.4.0
 async-timeout==4.0.3
 attrs==24.2.0
@@ -18,12 +18,12 @@ filelock==3.16.1
 Flask==3.0.3
 frozenlist==1.4.1
 fsspec==2024.9.0
-gotrue==1.3.0
+gotrue>=1.3.0,<2.0.0
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
-httpcore==0.17.3
-httpx==0.24.1
+httpcore>=0.17.3,<0.18.0
+httpx>=0.24.1,<0.25.0
 huggingface-hub==0.25.0
 hyperframe==6.0.1
 idna==2.10
@@ -35,8 +35,8 @@ MarkupSafe==2.1.5
 multidict==6.1.0
 packaging==24.1
 pluggy==1.5.0
-postgrest==0.16.11
-postgrest-py==0.4.0
+postgrest>=0.16.11,<0.17.0
+postgrest-py>=0.4.0,<0.5.0
 py==1.11.0
 pydantic==2.9.2
 pydantic_core==2.23.4
@@ -54,7 +54,7 @@ six==1.16.0
 sniffio==1.3.1
 storage3==0.7.7
 StrEnum==0.4.15
-supabase>=2.7.4
+supabase>=2.7.4,<3.0.0
 supafunc==0.5.1
 tokenizers==0.20.0
 toml==0.10.2
