--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 aiohttp==3.9.3
 anthropic==0.2.8
-httpx==0.25.0
-httpcore==0.18.0
+httpx>=0.24.0,<0.25.0
 python-dotenv==1.0.1
 supabase==1.2.0
 langdetect==1.0.9
